# 2_course

./: .gitmodules
programming/labs/: CompleteBinaryTree.cpp  DList.cpp  OfList.cpp  a.out  array.cpp  fList.cpp  node.cpp  queue.cpp  stack.cpp
programming/labs/lab1/headers/: CompleteBinaryTree.h  DBMS.h  DList.h  OList.h  array.h  mapHash.h  pair.hpp  queue.h  stack.h
programming/labs/lab1/source/: CompleteBinaryTree.cpp  DBMS.cpp  DList.cpp  OList.cpp  a.out  array.cpp  hashMap.cpp  input.txt  main  main.cpp  queue.cpp  stack.cpp
programming/labs/lab2/headers/: ATDSet.hpp  Array.hpp  binaryTree.hpp  hashTable.hpp  stack.hpp
programming/labs/lab2/source/: Array.cpp  binaryTree.cpp  stack.cpp  treeStack.cpp
programming/labs/lab2/source/task/: a.out  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6  task6.cpp  task6.out
programming/labs/lab3/Test/: ArrayTest.cpp  BinaryTreeTest.cpp  CMakeLists.txt  DListTest.cpp  OListTest.cpp  QueueTest.cpp  SetTest.cpp  StackTest.cpp  out.txt
programming/labs/lab3/UML/: ArrayUML.puml  DList.puml  OList.puml  binaryTree.puml  hasTable.puml  queue.puml  setUML.puml  stackUML.puml
programming/labs/lab3/headers/: Array.hpp  DList.h  OList.h  binaryTree.hpp  queue.h  set.hpp  treeStack.hpp
programming/labs/lab3/source/: ATDSet.cpp  Array.cpp  OList.cpp  binaryTree.cpp  hashTable.cpp  queue.cpp  set.cpp  stack.cpp
programming/labs/lab4/Headers/: Headers.h  Monitor.h  SpinLock.h  SpinWait.h  Zadanie1.h  Zadanie2.h  Zadanie3.h  semaphoreSlim.h
programming/labs/lab4/Source/: SpinLock.cpp  SpinWait.cpp  Zadanie1.cpp  Zadanie2.cpp  Zadanie3.cpp  a.out  main.cpp  main3.cpp  program  semaphoreSlim.cpp
programming/labs/lab4/source/: a.out  task1.cpp
programming/labs/lab5/: CMakeLists.txt  main.cpp
programming/labs/lab5/headers/: Cell.h  TextureManager.h  gameManager.h
programming/labs/lab5/source/: Cell.cpp  gameManager.cpp
programming/practice/practika1/: SELECT_Таблица1.колонка1_Таблица1.колонка2_.csv  SELECT_Таблица1.колонка1_Таблица2.колонка1_.csv  WHERE_Таблица1.колонка4_.csv  a.out  schema.json  test.csv  test.json  быстрые команды  таблица2.колонка1_.csv
programming/practice/practika1/headers/: ComandParser.hpp  SYBD.hpp  Table.hpp  array.hpp  csv.hpp  hash_map.hpp  map.hpp  pair.hpp
programming/practice/practika1/source/: ComandParser.cpp  SYBD.cpp  Table.cpp  a.out  array.cpp  csv.cpp  hash_map.cpp  main  main.cpp  map.cpp
programming/practice/practika1/Схема 1/Предприятия/: 1.csv
programming/practice/practika1/Схема 1/Работники/: 1.csv  2.csv  3.csv
programming/practice/practika1/Схема 1/Студенты/: 1.csv  2.csv  3.csv
programming/practice/practika1/Схема 1/Таблица1/: 1.csv  2.csv  3.csv  4.csv
programming/practice/practika1/Схема 1/Таблица2/: 1.csv  2.csv  3.csv  4.csv
programming/practice/practika1/Схема 1/Таблица3/: 1.csv
programming/practice/practika2/: SELECT_Студенты.Имя_.csv  WHERE_Работники.Возраст_Работники.Гендер_Студенты.Балл_.csv  schema.json  быстрые команды
programming/practice/practika2/headers/: ComandParser.hpp  SYBD.hpp  Table.hpp
programming/practice/practika2/source/: ComandParser.cpp  SYBD.cpp  Table.cpp  a.out  client  main  main.cpp  server
programming/practice/practika2/Схема 1/Работники/: 1.csv
programming/practice/practika3/: client  client.cpp  server  server.cpp  быстрые команды
programming/practice/practika3/BURSE/: config.json
programming/practice/practika3/DataBase/: a.out
programming/practice/practika3/source/: SYBD.cpp  Table.cpp  csv.cpp
programming/practice/practika4/: Bot_buy_order.cpp  Bot_order.cpp  Http.h  dot_order
programming/practice/practika4/DataBase/: schema.json
(+61 files in other folders)
